Add generalized, splittabl GridN definition with remapping for forthcoming geometry splitting/reconstructing